--- a/kontak.html
+++ b/kontak.html
@@ -22,7 +22,7 @@
     
         <h2 class="naglowek"> Jak się przygotować do wyprawy?</h2>
         <ol>
-            <li>Wyszukajcie biletów, porównajcie je na kilku stronach, i sprawdzcie wyloty z różnych miejsc, możliwe że pierwsze będziecie musieli gdzieś podjechać, możliwe że nawet całkiem daleko, ale że lot z tego miejsca będzie tańszy</li>
+            <li>ugauga</li>
         <li>Kupcie bilety i sprawdzcie czy macie bilety na całą podróż, czy macie wystarczająco czasu na przesiadki i czy miejsca w których zmieniacie środki transportu nie oferują czegoś ciekawego do zwiedzenia</li>
         <li> Część biletowa w zasadzie skończona, pamiętajcie, że czasami podczas podróży coś może pójść nie tak, więc jeśli kupujecie bilety lotnicze to zostawcie choćby 3 godziny między lotami, żeby jeszcze zdążyć się odprawić, no i używajcie google maps, on naprawdę doprowadzi was do celu, tylko czytajcie uważnie jakie trasy wam proponuje
             </ol>
