--- a/index.html
+++ b/index.html
@@ -3,56 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gry vs Książki</title>
+    <title>Gry vs Książki - Prezentacja</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1e1e2e;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            background-color: #2c3e50;
             color: white;
             text-align: center;
             padding: 20px;
-        }
-        h1 {
-            color: #ffcc00;
+            font-size: 24px;
+            font-weight: bold;
         }
         .container {
-            max-width: 600px;
-            margin: auto;
-            background-color: #333;
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: white;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #2c3e50;
+        }
+        .section {
+            margin-bottom: 20px;
         }
         ul {
-            text-align: left;
+            list-style-type: square;
+            padding-left: 20px;
         }
         .button {
             display: inline-block;
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #ffcc00;
-            color: #1e1e2e;
+            background-color: #2c3e50;
+            color: white;
             font-weight: bold;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
         }
         .button:hover {
-            background-color: #e6b800;
+            background-color: #1a252f;
         }
     </style>
 </head>
 <body>
+    <div class="header">Gry komputerowe vs Książki</div>
     <div class="container">
-        <h1>Dlaczego gry komputerowe są lepsze niż książki?</h1>
-        <ul>
-            <li><strong>Interaktywność</strong> - Możesz wpływać na świat gry, zamiast tylko go obserwować.</li>
-            <li><strong>Grafika i dźwięk</strong> - Gry oferują wizualne i dźwiękowe doświadczenia, które książki nie mogą zapewnić.</li>
-            <li><strong>Współpraca i rywalizacja</strong> - Możesz grać z innymi ludźmi i rywalizować lub współpracować.</li>
-            <li><strong>Imersja</strong> - Możesz poczuć się częścią świata gry, eksplorować go i podejmować decyzje.</li>
-            <li><strong>Rozwój umiejętności</strong> - Gry rozwijają refleks, myślenie strategiczne i zdolności logiczne.</li>
-        </ul>
-        <a href="https://docs.google.com/forms/d/1kh43p-UwWmAmzgxVVvQyeZQXGBOshLdkyt3SL0mU1Ho/edit" class="button" target="_blank">Podziel się swoją opinią</a>
+        <div class="section">
+            <h1>Wprowadzenie</h1>
+            <p>Czy gry komputerowe są lepsze niż książki? To pytanie od dawna budzi wiele emocji. W tej prezentacji przedstawimy kilka argumentów na korzyść gier.</p>
+        </div>
+        <div class="section">
+            <h2>Dlaczego gry komputerowe są lepsze?</h2>
+            <ul>
+                <li><strong>Interaktywność</strong> - Możesz wpływać na świat gry, zamiast tylko go obserwować.</li>
+                <li><strong>Grafika i dźwięk</strong> - Gry oferują wizualne i dźwiękowe doświadczenia, które książki nie mogą zapewnić.</li>
+                <li><strong>Współpraca i rywalizacja</strong> - Możesz grać z innymi ludźmi i rywalizować lub współpracować.</li>
+                <li><strong>Imersja</strong> - Możesz poczuć się częścią świata gry, eksplorować go i podejmować decyzje.</li>
+                <li><strong>Rozwój umiejętności</strong> - Gry rozwijają refleks, myślenie strategiczne i zdolności logiczne.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Podsumowanie</h2>
+            <p>Oczywiście książki mają swoje zalety, jednak gry komputerowe oferują więcej możliwości interakcji, emocji i nauki poprzez zabawę.</p>
+        </div>
+        <a href="https://docs.google.com/forms/d/1kh43p-UwWmAmzgxVVvQyeZQXGBOshLdkyt3SL0mU1Ho/edit" class="button" target="_blank">Kontakt</a>
     </div>
 </body>
 </html>
