--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="section image-section" style="background-image: url('https://source.unsplash.com/800x600/?gaming');">
         <h1>Wprowadzenie</h1>
         <div class="decorative-line"></div>
-        <p>Czy gry komputerowe są lepsze niż książki? To pytanie od dawna budzi wiele emocji. W tej prezentacji przedstawimy kilka argumentów na korzyść gier.</p>
+        <p>Czy gry komputerowe są lepsze niż książki? Gry wideo już dawno przestały być tanią rozrywką. Dzisiaj urosły do rangi sztuki i potrafią być tak samo wartościowe jak najlepsze filmy i książki. Choć oczywiście nie neguję wielu niewątpliwych zalet literatury, to jako użytkownicza obu mediów- książek i gier, myślę, żę te drugie mogą być nieco bardziej przekonujące, kiedy wszyscy żyjemy bardzo szybko o na nic nigdy nie ma czasu.</p>
     </div>
     
     <div class="section">
