--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <h1>Wprowadzenie</h1>
         <div class="decorative-line"></div>
         <p>Czy gry komputerowe są lepsze niż książki? Gry wideo już dawno przestały być tanią rozrywką...</p>
-        <img src="gaming.jpg" alt="Obraz gier" class="rounded-image">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.cyberbay.pl%2Fgry-w-ktorych-wybor-ma-znaczenie-moralnosc-w-grach%2F&psig=AOvVaw3uN9inMes3MtPRZRKMSJLl&ust=1741030518729000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCICChp2S7IsDFQAAAAAdAAAAABAE" alt="Obraz gier" class="rounded-image">
     </div>
     
     <div class="section">
