--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <h2>Podsumowanie</h2>
         <div class="decorative-line"></div>
         <p>Oczywiście książki mają swoje zalety, jednak gry komputerowe oferują więcej możliwości interakcji.</p>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ftechnika.dlastudenta.pl%2Fartykul%2Fgry-wideo-jako-medium-laczace-sztuke-technologie-i-interaktywnosc%2C155568.html&psig=AOvVaw3uN9inMes3MtPRZRKMSJLl&ust=1741030518729000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCICChp2S7IsDFQAAAAAdAAAAABAK" alt="Porównanie gier i książek" class="rounded-image">
+        <img src="gry_grafika.jpg" alt="Porównanie gier i książek" class="rounded-image">
     </div>
 </body>
 </html>
