--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
         <p>Oczywiście książki mają swoje zalety, jednak gry komputerowe oferują więcej możliwości interakcji.</p>
         <img src="gry_grafika.jpg" alt="Porównanie gier i książek" class="rounded-image">
     </div>
+    <footer>
+        <p>&copy; 2025 Paulina Golec. Wszelkie prawa zastrzeżone.</p>
+    </footer>
 </body>
 </html>
 
