--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             color: #333;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .navbar {
             background-color: #2c3e50;
@@ -52,7 +55,7 @@
             border-radius: 20px;
         }
         .section {
-            height: 100vh;
+            flex-grow: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -90,13 +93,22 @@
             max-width: 600px;
             font-size: 22px;
         }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            font-size: 18px;
+            border-radius: 20px 20px 0 0;
+            box-shadow: 0px -4px 8px rgba(0, 0, 0, 0.2);
+            margin-top: auto;
+        }
     </style>
 </head>
 <body>
     <div class="navbar">
         <a href="https://docs.google.com/forms/d/1kh43p-UwWmAmzgxVVvQyeZQXGBOshLdkyt3SL0mU1Ho/edit" target="_blank">Kontakt</a>
         <a href="linki.html">Materiały</a>
-        <a href="kontakt.html">O mnie</a>
     </div>
     
     <div class="header">Gry komputerowe vs Książki</div>
