--- a/linki.html
+++ b/linki.html
@@ -63,9 +63,9 @@
     <div class="container">
         <h1>Bibliografia</h1>
         <ul>
-            <li><a href="https://how2play.pl/gamerlifestyle/gra-czy-ksiazka-co-wybrac/">Link 1</a></li>
-            <li><a href="https://how2play.pl/gamerlifestyle/gra-czy-ksiazka-co-wybrac/">Link 2</a></li>
-            <li><a href="https://naekranie.pl/artykuly/po-co-czytac-skoro-mamy-gry">Link 3</a></li>
+            <li><a href="https://how2play.pl/gamerlifestyle/gra-czy-ksiazka-co-wybrac/">Link 1: Gry vs książki</a></li>
+            <li><a href="https://how2play.pl/gamerlifestyle/gra-czy-ksiazka-co-wybrac/">Link 2: Co wybrać?</a></li>
+            <li><a href="https://naekranie.pl/artykuly/po-co-czytac-skoro-mamy-gry">Link 3: Po co czytać?</a></li>
             <li><a href="https://www.eurogamer.pl/co-czy-ksiazki-i-gry-wideo">Link 4</a></li>
             <li><a href="https://www.reddit.com/r/Fantasy/comments/111k4fp/books_vs_movies_vs_game_what_is_more_immersive/?tl=pl">Link 5</a></li>
         </ul>
